@@ -63,8 +63,10 @@ import org.wso2.siddhi.query.api.expression.AttributeFunction;
 import org.wso2.siddhi.query.compiler.SiddhiCompiler;
 
 import java.io.File;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -90,15 +92,15 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
         return username != null ? username.toString() : null;
     }
 
-    public Response siddhiAppsPost(String body) throws NotFoundException {
+    public Response siddhiAppsPost(String body, String requestURI) throws NotFoundException {
         String jsonString;
         Response.Status status;
         try {
             String siddhiAppName = StreamProcessorDataHolder.
                     getStreamProcessorService().validateAndSave(body, false);
             if (siddhiAppName != null) {
-                URI location = new URI(SiddhiAppProcessorConstants.SIDDHI_APP_REST_PREFIX + File.separator +
-                        File.separator + siddhiAppName);
+                URL resourceUrl = new URL(requestURI + File.separator + siddhiAppName);
+                URI location = resourceUrl.toURI();
                 jsonString = new Gson().toJson(new ApiResponseMessage(ApiResponseMessage.SUCCESS,
                         "Siddhi App saved succesfully and will be deployed in next deployment cycle"));
                 return Response.created(location).entity(jsonString).build();
@@ -109,7 +111,7 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
                 status = Response.Status.CONFLICT;
             }
 
-        } catch (SiddhiAppDeploymentException | URISyntaxException e) {
+        } catch (SiddhiAppDeploymentException | URISyntaxException | MalformedURLException e) {
             jsonString = new Gson().
                     toJson(new ApiResponseMessageWithCode(ApiResponseMessageWithCode.FILE_PROCESSING_ERROR,
                             e.getMessage()));
@@ -123,7 +125,7 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
         return Response.status(status).entity(jsonString).build();
     }
 
-    public Response siddhiAppsPut(String body) throws NotFoundException {
+    public Response siddhiAppsPut(String body, String requestURI) throws NotFoundException {
         String jsonString = new Gson().toString();
         Response.Status status = Response.Status.OK;
         try {
@@ -136,14 +138,14 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
                     jsonString = new Gson().toJson(new ApiResponseMessage(ApiResponseMessage.SUCCESS,
                             "Siddhi App updated succesfully and will be deployed in next deployment cycle"));
                 } else {
-                    URI location = new URI(SiddhiAppProcessorConstants.SIDDHI_APP_REST_PREFIX + File.separator +
-                            File.separator + siddhiAppName);
+                    URL resourceUrl = new URL(requestURI + File.separator + siddhiAppName);
+                    URI location = resourceUrl.toURI();
                     jsonString = new Gson().toJson(new ApiResponseMessage(ApiResponseMessage.SUCCESS,
                             "Siddhi App saved succesfully and will be deployed in next deployment cycle"));
                     return Response.created(location).entity(jsonString).build();
                 }
             }
-        } catch (SiddhiAppDeploymentException | URISyntaxException e) {
+        } catch (SiddhiAppDeploymentException | MalformedURLException | URISyntaxException e) {
             jsonString = new Gson().
                     toJson(new ApiResponseMessageWithCode(ApiResponseMessageWithCode.FILE_PROCESSING_ERROR,
                             e.getMessage()));
@@ -866,7 +868,7 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
             return Response.status(Response.Status.UNAUTHORIZED).entity("Insufficient permissions to add Siddhi Apps")
                     .build();
         }
-        return siddhiAppsPost(body);
+        return siddhiAppsPost(body, request.getUri());
     }
 
     @Override
@@ -876,7 +878,7 @@ public class SiddhiAppsApiServiceImpl extends SiddhiAppsApiService {
             return Response.status(Response.Status.UNAUTHORIZED).entity("Insufficient permissions to update Siddhi " +
                     "Apps").build();
         }
-        return siddhiAppsPut(body);
+        return siddhiAppsPut(body, request.getUri());
     }
 
     @Override
